# OpenclassroomsProject

./: .gitattributes  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-to-hf-space.yml
.ipynb_checkpoints/: 02_preprocessing-checkpoint.ipynb  03_mlodelisation-checkpoint.ipynb  03_modelisation-checkpoint.ipynb  pyproject-checkpoint.toml
data/: df_central.csv
data/.ipynb_checkpoints/: df_central_encode-checkpoint.csv
data/processed/: df_central_encode.csv  df_central_encode_norm.csv  df_central_norm.csv
db/: attrition-local.session.sql  create_db.py  load_csv.py
models/: model.joblib
notebooks/: 01_analyse_exploratoire.ipynb.ipynb  02_preprocessing.ipynb  03_modelisation.ipynb
notebooks/.ipynb_checkpoints/: 01_analyse_exploratoire.ipynb-checkpoint.ipynb  02_preprocessing-checkpoint.ipynb  03_modelisation-checkpoint.ipynb  03_modelisation_et_optimisation-checkpoint.ipynb  04_1Feature engineering-checkpoint.ipynb
src/: __init__.py  data_preparation.py  train_model.py  utils.py
src/api/: schemas.py  server.py
tests/: test_api.py  test_data_preparation.py  test_predict.py
