[project]
name = "classification-informations"
version = "0.1.0"
description = "Project 4 Classification automatique d'informations"
authors = [
    { name = "Ksenia Dautel" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "joblib>=1.4.0",
    "uvicorn>=0.38.0",
    "huggingface_hub>=0.24.0"
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=5.0.0",
    "shap>=0.49.1",
]
