[project]
name = "classification-informations"
version = "0.1.0"
description = "Project Déployez un modèle de Machine Learning"
authors = [
    { name = "Ksenia Dautel" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.3",
  "imbalanced-learn>=0.14.0",
  "fastapi>=0.115",
  "uvicorn>=0.38",
  "huggingface_hub>=0.24",
  "joblib>=1.4",
  "pydantic>=2.8",        # FastAPI v0.115 uses Pydantic v2
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=5.0.0",
    "shap>=0.49.1"
]
